# prahari

./: .gitignore  Dockerfile  README.md  architecture.txt  pyproject.toml  render.yaml  tech-stack.txt
config/: prometheus.yml  settings.yaml
data/: .gitkeep
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/backend/: main.py  requirements.txt
frontend/backend/api/: auth.py  main.py  prahari_auth.db  requirements.txt
frontend/backend/data/: cyber_log_dataset.csv  prep_cyber_data.py  prep_track_data.py  track_dataset.csv
frontend/backend/models/: cyber_anomaly_model.pkl  track_defect_model.pkl  train_cyber_model.py  train_track_model.py
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/assets/: prahari-logo.png.asset.json  prahari-splash-logo.png.asset.json
frontend/src/components/: app-shell.tsx  india-map.tsx  live-railway-map-client.tsx  live-railway-map.tsx  panels.tsx
frontend/src/hooks/: use-prahari-api.ts
frontend/src/lib/: firebase.ts
frontend/src/routes/: __root.tsx  ccrs.tsx  copilot.tsx  crew.tsx  cyber.tsx  incidents.tsx  index.tsx  infrastructure.tsx  login.tsx  maintenance.tsx  network-map.tsx  predictive.tsx  reports.tsx  seed.tsx  (+4 more)
models/: .gitkeep
services/convergence_engine/: Dockerfile  main.py  requirements.txt
services/fatigue_connector/: Dockerfile  main.py
services/simulators/: Dockerfile  main.py
src/prahari/: __init__.py  config.py  main.py
src/prahari.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_detection.py  test_models.py  test_pipeline.py
(+16 files in other folders)
