[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prahari"
version = "1.0.0"
description = "AI-powered Loco Pilot Fatigue & Microsleep Detection System for Indian Railways"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary — Indian Railways / PRAHARI Project"}
authors = [
    {name = "PRAHARI Team"},
]

dependencies = [
    # Deep Learning
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ultralytics>=8.1.0",

    # Computer Vision
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.9",

    # Scientific
    "numpy>=1.24.0",
    "scipy>=1.11.0",

    # Web Framework removed (FastAPI, uvicorn, websockets)

    # Data Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Configuration
    "pyyaml>=6.0",

    # Monitoring
    "prometheus-client>=0.19.0",

    # Utilities
    "pillow>=10.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.17.0",
]
training = [
    "tensorboard>=2.15.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "albumentations>=1.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[project.scripts]
prahari = "prahari.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
